# fastapi_monolith_template

./: Makefile  README.md  pyproject.toml  pytest.ini  run.sh
.github/workflows/: ci.yaml
alembic/: env.py
infra/: Dockerfile
infra/dev/: docker-compose.yaml
src/: lifespan.py  main.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: __init__.py  hint.py
src/config/: __init__.py  config.py
src/core/constants/: hint.py
src/core/db/: __init__.py  db.py
src/core/dependencies/: hint.py
src/core/exceptions/: hint.py
src/core/logger/: __init__.py  logger.py
src/core/models/: hint.py
src/repository/: interfaces.py
src/repository/sql/: hint.py
src/s3/: s3.py
src/schemas/dataclasses/: hint.py
src/schemas/pydantic/: hint.py
tests/: conftest.py
